Troubleshooting tips and bugfixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,7 @@
     <!-- Modals -->
     {% include 'modals/config.html' %}
     {% include 'modals/polar.html' %}
+    {% include 'modals/troubleshoot.html' %}
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
