--- a/templates/modals/config.html
+++ b/templates/modals/config.html
@@ -71,6 +71,10 @@
                                     <i class="fa-solid fa-circle-info me-2"></i>
                                     Configure the remote Raspberry Pi or server that will execute the RTL-SDR recording
                                     commands.
+                                    <a href="#" class="text-info fw-bold ms-2" data-bs-toggle="modal"
+                                        data-bs-target="#troubleshootModal">
+                                        <i class="fa-solid fa-life-ring me-1"></i>Verbindungsprobleme?
+                                    </a>
                                 </div>
                                 <div class="row g-3">
                                     <div class="col-md-6">
