--- a/templates/modals/config.html
+++ b/templates/modals/config.html
@@ -93,6 +93,11 @@
                                             class="form-control bg-dark text-white border-secondary">
                                     </div>
                                 </div>
+                                <div class="mt-3 text-end">
+                                    <button class="btn btn-warning" onclick="testSSH()">
+                                        <i class="fa-solid fa-flask me-1"></i> Test Connection
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
