--- a/templates/modals/config.html
+++ b/templates/modals/config.html
@@ -94,17 +94,31 @@
                                     </div>
                                 </div>
                                 <div class="mt-3 text-end">
-                                    <button class="btn btn-warning" onclick="testSSH()">
+                                    <button class="btn btn-warning" onclick="testSSH()" id="btn-test-ssh">
                                         <i class="fa-solid fa-flask me-1"></i> Test Connection
                                     </button>
                                 </div>
+                                <div class="row g-3 mb-3">
+                                    <div class="col-12">
+                                        <label class="form-label text-light small">Execution Mode</label>
+                                        <div class="form-check form-switch ps-0">
+                                            <label class="form-check-label text-white me-3" for="cfg-exec-mode">Remote
+                                                (SSH)</label>
+                                            <input class="form-check-input" type="checkbox" id="cfg-exec-mode"
+                                                onchange="toggleSSHFields()" style="float: none; margin-left: 0;">
+                                            <label class="form-check-label text-white ms-2" for="cfg-exec-mode">Local
+                                                (on Device)</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row g-3" id="ssh-config-fields">
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <!-- Satellites Tab -->
-                    <div class="tab-pane fade" id="satellites-pane" role="tabpanel">
-                        <div class="row g-4">
+                        <!-- Satellites Tab -->
+                        <div class="tab-pane fade" id="satellites-pane" role="tabpanel">
+                            <div class="row g-4"></div>
                             <!-- Search Row -->
                             <div class="col-12">
                                 <h6 class="text-white mb-3">Add New Satellite</h6>
